force-app/main/default/objects/CustomSyncSetting__c/CustomSyncSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Custom Sync Setting</label>
</CustomObject>