force-app/main/default/objects/CustomSyncSetting__c/fields/ApiKey__c.field-meta.xml
<CustomField>
    <fullName>ApiKey__c</fullName>
    <label>Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>