force-app/main/default/objects/CustomSyncSetting__c/fields/EmailReport__c.field-meta.xml
<CustomField>
    <fullName>EmailReport__c</fullName>
    <label>Email Report</label>
    <required>true</required>
    <type>Email</type>
</CustomField>