force-app/main/default/objects/CustomSyncSetting__c/fields/LimitQuanitySync__c.field-meta.xml
<CustomField>
    <fullName>LimitQuanitySync__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Limit Quanity Sync</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>